<?xml version="1.0" encoding="utf-8"?>

    <FrameLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/item_image"
            android:src="@drawable/hotel_maihar"
            android:background="@drawable/rounded_list_image"
            style="@style/ImageTheme"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/top_margin"
            android:layout_marginBottom="@dimen/margin"
            android:layout_marginLeft="@dimen/margin"
            android:layout_marginRight="@dimen/margin"
            android:orientation="vertical">

            <TextView

                android:id="@+id/item_name_text"
                style="@style/ItemText"
                android:layout_weight="0.6"
                android:typeface="sans"
                android:textStyle="bold"
                android:textSize="@dimen/name_size"
                android:gravity="top"
                android:textColor="@color/black"
                android:maxLines="2"
                android:text="@string/sample_name"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <ImageView
                    android:src="@drawable/ic_action_name_location"
                    style="@style/IconTheme"/>

                <TextView
                    android:id="@+id/item_location_text"
                    style="@style/ItemText"
                    android:textColor="@color/design_default_color_primary_variant"
                    android:clickable="true"
                    android:maxLines="1"
                    android:ellipsize="end"
                    android:text="@string/sample_location"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/contact_container"
                android:layout_weight="1"
                android:orientation="horizontal">

                <ImageView
                    android:src="@drawable/ic_action_name_call"
                    style="@style/IconTheme"/>

                <TextView
                    android:id="@+id/item_contact_text"
                    style="@style/ItemText"
                    android:autoLink="phone"
                    android:textColorLink="@color/design_default_color_primary_variant"
                    android:text="@string/sample_contact"/>

            </LinearLayout>

            <TextView
                android:id="@+id/item_desc_text"
                style="@style/ItemText"
                android:layout_weight="1"
                android:textSize="@dimen/rating_desc_size"
                android:text="@string/sample_desc" />


        </LinearLayout>

    </LinearLayout>

    </FrameLayout>